penpot/penpot-backend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penpot-backend
  namespace: homelab
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      name: penpot-backend
  template:
    metadata:
      labels:
        name: penpot-backend
        egress: lan
        ingress: lan
    spec:
      securityContext:
        fsGroup: 1000
        # runAsUser: 1000
        # runAsGroup: 1000
      containers:
        - name: penpot-backend
          image: "penpotapp/backend:2.6.1" # 
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "2Gi"
              cpu: "3000m"
          ports:
            - name: backend
              containerPort: 6060
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /opt/data/assets
              name: config
              subPath: penpot

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: penpot-local-config-pvc
