penpot/penpot-exporter-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penpot-exporter
  namespace: homelab
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      name: penpot-exporter
  template:
    metadata:
      labels:
        name: penpot-exporter
        egress: lan
        ingress: lan
    spec:
      securityContext:
        fsGroup: 1000
        # runAsUser: 1000
        # runAsGroup: 1000
      containers:
        - name: penpot-exporter
          image: "penpotapp/exporter:2.6.1" # 
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "200Mi"
              cpu: "500m"
          ports:
            - name: exporter
              containerPort: 6061
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
