penpot/penpot-frontend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penpot-frontend
  namespace: homelab
  labels:
    name: penpot-frontend
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      name: penpot-frontend
  template:
    metadata:
      labels:
        name: penpot-frontend
        egress: lan
        ingress: lan
    spec:
      securityContext:
        fsGroup: 1000
        # runAsUser: 1000
        # runAsGroup: 1000
      containers:
        - name: penpot-frontend
          image: "penpotapp/frontend:2.6.1" # 
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "200Mi"
              cpu: "500m"
          ports:
            - name: frontend
              containerPort: 8080
              protocol: TCP
            - name: test-http
              containerPort: 80
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /opt/data/assets
              name: config
              subPath: penpot
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: penpot-local-config-pvc
