penpot/penpot-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: penpot-exporter-svc
  namespace: homelab
  labels:
    name: penpot-exporter-svc
  annotations:
    name: penpot-exporter-svc
spec:
  type: ClusterIP
  # externalTrafficPolicy: Local
  ports:
    - port: 6061
      name: exporter
      targetPort: 6061
      protocol: TCP
      # nodePort: 30000
  selector:
    name: penpot-exporter
