penpot/penpot-redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: penpot-redis-svc
  namespace: homelab
  labels:
    name: penpot-redis-svc
  annotations:
    name: penpot-redis-svc
spec:
  type: ClusterIP
  # externalTrafficPolicy: Local
  ports:
    - port: 6379
      name: redis
      targetPort: 6379
      protocol: TCP
      # nodePort: 30000
  selector:
    name: penpot-redis
